[package]
name = "launchpad"
version = "0.1.0"
authors = ["Dan Bruder <ddbruder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
quicli = "0.4.0"
include_dir = {version = "0.6.0", features=["search"]}
